syntax = "proto3";

import "../general.proto";

message PlaySoundRequest {
    UUID user = 1; // User identifier.
    UUID identifier = 2; // Sound identifier generated by the actor.
    Sound intro = 3;
    Sound sound = 4;
    double volume = 5;
    double rate = 6;
    bool loop = 7;
}

message PlaySoundResponse {
    UUID identifier = 1;
}

message Sound {
    string category = 1;
    string name = 2;
}
