syntax = "proto3";

import "../general.proto";

message StopSoundRequest {
    UUID sound = 1; // Sound identifier.
    uint32 delay = 2;
    uint32 duration = 3;
}

message StopSoundResponse {
    UUID sound = 1;
}
